--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -3,5 +3,6 @@
 
     <p><a href='/'>Home</a></p>
     <p><a href='/About'>About</a></p>
+    <p><a href='/Projects'>Projects</a></p>
     
 </header>
